include wss in coins table
