# code/kmd_ntx_api/models.py
@@ -58,6 +58,7 @@ class coins(models.Model):
     coins_info = JSONField(default=dict)
     electrums = JSONField(default=dict)
     electrums_ssl = JSONField(default=dict)
+    electrums_wss = JSONField(default=dict)
     lightwallets = JSONField(default=dict)
     explorers = JSONField(default=dict)
     dpow = JSONField(default=dict)
